--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+.app-container {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px;
+  background-color: #282c34;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header-title {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart-icon {
+  cursor: pointer;
+}
+
+.cart-modal {
+    padding: 20px;
+    width: 300px;
+    position: fixed;
+    top: 60px; /* Adjust this value to move the modal down */
+    right: 10px;
+    z-index: 1000; /* Ensure the modal is above other content */
+    background-color: #f0f0f0;
+    border-radius: 10px;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.product-image {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.product-details {
+    display: flex;
+    flex-direction: column;
+}
+
+.product-title {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.product-price {
+    color: #777;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border:none;
+    background-color: transparent;
+}
+
+.trash-icon {
+    width: 20px;
+    height: 20px;
+    fill: red;
+}
+
+.remove-button {
+    margin-left: auto;
+    border: none;
+    background-color: transparent;
+    padding: 0;
 }
